--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    
+
+    <link rel="icon" type="image/x-icon" href="/public/favicon-16x16.ico">
+    
     <title>Hriday H Patel - Digital Architect & Quantum Computing Pioneer</title>
     <meta name="description" content="16-year-old IB student architecting the future through quantum computing, cybersecurity innovation, and AI-powered solutions. Explore revolutionary projects like CRYPTECH." />
     <meta name="author" content="Hriday H Patel" />
     <meta name="keywords" content="quantum computing, cybersecurity, artificial intelligence, digital architect, CRYPTECH, student researcher" />
-
     <meta property="og:title" content="Hriday H Patel - Digital Architect & Quantum Computing Pioneer" />
     <meta property="og:description" content="16-year-old IB student architecting the future through quantum computing, cybersecurity innovation, and AI-powered solutions." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
